--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
-    "react-native-game-engine": "^0.10.1"
+    "react-native-game-engine": "^0.10.1",
+    "react-navigation": "^3.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
