--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "prop-types": "^15.7.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "^0.58.6",
     "react-native-cli": "^2.0.1",
