--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,10 +134,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-sound')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
 }
 
 // Run this once to be able to run the application with BUCK
