--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-game-engine": "^0.10.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-scrolling-images": "^1.0.5",
+    "react-native-sound": "^0.10.12",
     "react-navigation": "^3.6.0"
   },
   "devDependencies": {
