--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,11 @@ dependencies {
 
 }
 
+android {
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
+}
+
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
